# yAssets

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  README.md  biome.json  components.json  index.html  lefthook.yml  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
.claude/skills/dev-playbook/: SKILL.md  gotchas.md  release.md
.github/workflows/: ci.yml  release.yml
src/: index.css  main.tsx  routeTree.gen.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: make_icon.rs
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  events.rs  lib.rs  main.rs  media_protocol.rs
src-tauri/src/collect/: auth.rs  mod.rs  server.rs
src-tauri/src/commands/: assets.rs  clipboard.rs  collect.rs  drag.rs  duplicates.rs  export.rs  folders.rs  handoff.rs  import.rs  library.rs  maintenance.rs  mod.rs  smart_folders.rs  sources.rs  tags.rs  trash.rs  url.rs  watched_folders.rs
src-tauri/src/db/: migrations.rs  mod.rs
src-tauri/src/import/: color.rs  dhash.rs  mod.rs  thumbs.rs
src-tauri/src/link/: mod.rs
src-tauri/src/sources/: iconify.rs  mod.rs  openverse.rs  pexels.rs  pixabay.rs  wallhaven.rs
src-tauri/src/state/: mod.rs
src-tauri/src/ytdlp/: mod.rs
src/components/: about-dialog.tsx  app-dialogs.tsx  app-error-fallback.tsx  changelog-dialog.tsx  empty-state.tsx  folder-icon-catalog.ts  folder-picker.tsx  i18n-provider.tsx  icons.ts  providers.tsx  set-cover-dialog.tsx  theme-provider.tsx
src/components/discover/: discover-page.tsx  remote-grid.tsx
src/components/duplicates/: duplicates-dialog.tsx
src/components/grid/: asset-card.tsx  asset-context-items.tsx  asset-grid.tsx  drag-ghost.tsx  grid-empty-state.tsx  subfolder-strip.tsx
src/components/import/: drop-overlay.tsx  duplicate-alert-dialog.tsx
src/components/inspector/: asset-details.tsx  folder-details.tsx  folder-summary.tsx  inspector-panel.tsx  multi-summary.tsx  rating-stars.test.tsx  rating-stars.tsx  section.tsx  tag-chips.tsx
src/components/layout/: app-shell.tsx  color-filter.tsx  filter-control.tsx  sort-menu.tsx  toolbar.tsx
src/components/preferences/: preferences-dialog.tsx
src/components/preview/: audio-viewer.tsx  canvas-viewer.test.tsx  canvas-viewer.tsx  compare.tsx  html-viewer.tsx  pdf-viewer.tsx  preview-overlay.tsx  quick-look.tsx  slideshow.test.tsx  slideshow.tsx  text-viewer.tsx  video-viewer.tsx
src/components/sidebar/: discover-nav.tsx  folder-customize-dialog.tsx  folder-drag-ghost.tsx  folder-name-dialog.tsx  folder-tree-item.tsx  folder-tree.tsx  library-switcher.tsx  nav-icon.tsx  smart-folder-dialog.tsx  smart-folder-list.tsx  smart-views.tsx  tag-edit-dialog.tsx  tag-list.tsx
src/components/ui/: alert-dialog.tsx  alert.tsx  attachment.tsx  bubble.tsx  button-group.tsx  button.tsx  calendar.tsx  card.tsx  carousel.tsx  checkbox.tsx  combobox.tsx  command.tsx  context-menu.tsx  dialog.tsx  drawer.tsx  dropdown-menu.tsx  empty.tsx  field.tsx  hover-card.tsx  input-group.tsx  input-otp.tsx  input.tsx  item.tsx  menubar.tsx  menus.test.tsx  message-scroller.tsx  message.tsx  native-select.tsx  navigation-menu.tsx  popover.tsx  progress.tsx  radio-group.tsx  select.tsx  sheet.tsx  sidebar.tsx  sonner.tsx  spinner.tsx  switch.tsx  tabs.tsx  textarea.tsx  (+3 more)
src/hooks/: use-card-drag.ts  use-collect-events.ts  use-cover-worker.ts  use-debounced-value.test.ts  use-debounced-value.ts  use-drag-import.ts  use-drop-target.ts  use-element-width.ts  use-export.ts  use-folder-drag.ts  use-import.ts  use-library-actions.ts  use-menu-actions.ts  use-preview-src.ts  use-update-check.ts  use-video-thumbs.ts  use-window-drag.ts
src/lib/: bindings.ts  cover-capture.ts  dialogs.ts  errors.test.ts  errors.ts  file-kinds.test.ts  file-kinds.ts  folder-tree.test.ts  folder-tree.ts  format.test.ts  format.ts  image-cover.ts  library-view.test.ts  library-view.ts  logger.ts  masonry.test.ts  masonry.ts  media.ts  opener.ts  pdf-cover.ts  pointer.test.tsx  pointer.ts  query-client.ts  tauri-events.ts  tauri.ts  text.ts  update-actions.ts  updater.ts  video-cover.test.ts  video-cover.ts  viewer-registry.test.ts  viewer-registry.ts
src/lib/changelog/: en.ts  index.ts  ja.ts  zh.ts
src/lib/i18n/: en.ts  index.ts  ja.ts  locale-switch.test.ts  plural.test.ts  plural.ts  zh.ts
src/lib/queries/: assets.test.ts  assets.ts  collect.ts  fixtures.ts  folders.ts  keys.ts  library.ts  maintenance.ts  smart-folders.ts  sources.ts  tags.ts  watched-folders.ts
src/lib/stores/: cover-bust-store.ts  drag-store.ts  duplicates-store.ts  example-store.test.ts  example-store.ts  folder-drag-store.ts  locale-store.ts  recent-folders-store.ts  selection-store.test.ts  selection-store.ts  sources-store.ts  ui-store.ts  view-prefs-store.test.ts  view-prefs-store.ts
src/routes/: __root.tsx  _library.tsx  index.tsx  welcome.tsx
src/routes/_library/: discover.tsx  index.tsx  preview.tsx
src/test/: setup.ts
