[package]
name = "yassets"
version = "0.1.14"
description = "yAssets — a cross-platform media/asset manager desktop app"
authors = ["maosensen"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "yassets_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# macos-private-api: transparent WebView background so the native window
# vibrancy (frosted glass) shows through — see tauri.conf `macOSPrivateApi`.
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
# Type-safe IPC: generate src/lib/bindings.ts from the Rust commands.
# v2 is RC and tightly version-coupled — keep these pinned with `=`.
specta = { version = "=2.0.0-rc.25", features = ["derive"] }
specta-typescript = "=0.0.12"
tauri-specta = { version = "=2.0.0-rc.25", features = ["derive", "typescript"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-log = "2"
tauri-plugin-store = "2"
log = "0.4"
# Data layer: SQLite lives in Rust only — SQL never crosses the IPC boundary.
# `bundled` statically compiles SQLite so all three platforms ship the same version.
rusqlite = { version = "0.37", features = ["bundled"] }
# Content-hash dedupe for the import pipeline (streaming, >1 GB/s single-thread).
blake3 = "1"
# Media pipeline: decode (image) → SIMD resize (fast_image_resize) → lossy WebP
# encode (`webp`; the `image` crate's WebP encoder is lossless-only).
# All decoders here are pure-Rust (no system libs): tiff/ico join the base set.
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp", "gif", "bmp", "tiff", "ico"] }
fast_image_resize = "5"
webp = "0.3"
# SVG rasterization for thumbnails (pure Rust, no system deps).
resvg = "0.45"
# Design-format thumbnails (pure Rust): PSD flattened composite, and the
# embedded preview PNG inside zip-container formats (Sketch/ORA/KRA). `zip`
# is trimmed to `deflate` only so it stays pure-Rust (no bzip2/lzma/zstd C libs).
psd = "0.3"
zip = { version = "2", default-features = false, features = ["deflate"] }
# CPU parallelism for the import pipeline (hash/decode/resize).
rayon = "1"
# Recursive directory discovery on import (does not follow symlinks).
walkdir = "2"
# Watch-folder auto-import: debounced filesystem events (pure-Rust — FSEvents /
# inotify / ReadDirectoryChangesW, no system libs). The debouncer coalesces the
# event storm from a large copy and settles write-then-rename into one import.
notify-debouncer-full = "0.3"
# Asset/folder/job ids. MUST use the lowercase alphabet in `library` — macOS
# APFS is case-insensitive, so mixed-case ids would collide on disk.
nanoid = "0.4"
# Content-Type for the media protocol + recorded mime on import.
mime_guess = "2"
# Percent-decoding of custom-protocol request paths.
percent-encoding = "2"
clipboard-rs = "0.3.5"
base64 = "0.22.1"
tauri-plugin-updater = "2.10.1"
tauri-plugin-process = "2.3.1"
# HTTP client for the Discover feature (third-party source APIs + full-res
# downloads). All network lives in Rust — the webview only hotlinks provider
# thumbnails. rustls (no system OpenSSL) to stay pure-Rust across platforms.
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
    "gzip",
] }

[dev-dependencies]
tempfile = "3"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
tauri-plugin-window-state = "2"

